@@ -58,7 +58,7 @@ public class ReplaceValidateNotNullHavingVarargsWithObjectsRequireNonNull extend
                 List<Expression> arguments = mi.getArguments();
                 String template = arguments.size() == 2
                         ? "Objects.requireNonNull(#{any()}, #{any(java.lang.String)})"
-                        : String.format("Objects.requireNonNull(#{any()}, () -> String.format(#{any(java.lang.String)}, %s))",
+                        : "Objects.requireNonNull(#{any()}, () -> String.format(#{any(java.lang.String)}, %s))".formatted(
                         String.join(", ", Collections.nCopies(arguments.size() - 2, "#{any()}")));
 
 
